--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -17,7 +17,7 @@ commands:
     permission-message: "§cVous n'avez pas le grade requis, rendez-vous sur https://store.endoskull.fr"
   tag:
     permission: endoskull.tag
-  nick:
-     permission: endoskull.nick
-     aliases: [nickname]
-     permission-message: "§cVous n'avez pas le grade requis, rendez-vous sur https://store.endoskull.fr"
+#  nick:
+#     permission: endoskull.nick
+#     aliases: [nickname]
+#     permission-message: "§cVous n'avez pas le grade requis, rendez-vous sur https://store.endoskull.fr"
