--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
@@ -80,6 +87,13 @@
             <version>7.21</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/libs/PlayerParticles-7.21.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.koca2000</groupId>
+            <artifactId>NoteBlockAPI</artifactId>
+            <version>-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
