--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,21 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>codemc-snapshots</id>
+            <url>https://repo.codemc.io/repository/maven-snapshots/</url>
+        </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+        <repository>
+            <id>dmulloy2-repo</id>
+            <url>https://repo.dmulloy2.net/repository/public/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
@@ -65,6 +80,12 @@
             <systemPath>${project.basedir}/libs/EndoSkullAPI-1.0-SNAPSHOT.jar</systemPath>
         </dependency>
         <dependency>
+            <groupId>net.wesjd</groupId>
+            <artifactId>anvilgui</artifactId>
+            <version>1.5.3-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <!--<dependency>
             <groupId>anvilgui</groupId>
             <artifactId>api</artifactId>
             <version>1.5.0</version>
@@ -77,8 +98,8 @@
             <version>1.5.0</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/libs/anvilgui-1_8_R3-1.5.0-SNAPSHOT.jar</systemPath>
-        </dependency>
-        <dependency>
+        </dependency>-->
+        <!--<dependency>
             <groupId>fr.endoskull</groupId>
             <artifactId>cacheapi</artifactId>
             <version>0.1</version>
@@ -91,6 +112,19 @@
             <version>7.21</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/libs/PlayerParticles-7.21.jar</systemPath>
+        </dependency>-->
+        <dependency>
+            <groupId>com.github.koca2000</groupId>
+            <artifactId>NoteBlockAPI</artifactId>
+            <version>-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.comphenix.protocol</groupId>
+            <artifactId>ProtocolLib</artifactId>
+            <version>4.7.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/ProtocolLib.jar</systemPath>
         </dependency>
     </dependencies>
 
